Bug 292343 - Dimensions of drkonqi window can be reduced beyond any limit when in Developer Information tab
Summary: Dimensions of drkonqi window can be reduced beyond any limit when in Develope...
Status: RESOLVED FIXED
Alias: None
Product: drkonqi
Classification: Applications
Component: general (other bugs)
Version First Reported In: 1.0
Platform: Gentoo Packages Linux
: NOR minor
Target Milestone: ---
Assignee: Unassigned bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-01-24 17:50 UTC by Jesse
Modified: 2013-02-24 09:33 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.10.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jesse 2012-01-24 17:50:47 UTC
Version:           1.0 (using Devel) 
OS:                Linux

When in general tab, the window size can't be reduced beyond a certain point but on changing to Developer Information (backtrace) tab the window size can be reduced beyond that point to any size.

The behavior should be same for both the tabs.

Reproducible: Always

Steps to Reproduce:
1. Open drkonqi crash handler dialog (which opens up when an application crashes, don't know how to open that except without a crash)
2. Reduce the window size in General tab. It can't be reduced after a certain point.
3. Change to Developer Information tab.
4. Reduce the window size as much it can be.

Actual Results:  
Window size can be reduced to any size

Expected Results:  
Window size should not be changed after it's the minimum size as in General tab

OS: Linux (x86_64) release 3.2.1-zen
Compiler: x86_64-pc-linux-gnu-gcc
Comment 1 Jekyll Wu 2013-02-24 09:33:58 UTC
Git commit 859b7d2492b238c11a8f0bdc5f540587af3ad422 by Jekyll Wu.
Committed on 24/02/2013 at 10:28.
Pushed by jekyllwu into branch 'KDE/4.10'.

Set minimum size for the main drkonqi dialog
FIXED-IN: 4.10.1

M  +1    -0    drkonqi/drkonqidialog.cpp

http://commits.kde.org/kde-runtime/859b7d2492b238c11a8f0bdc5f540587af3ad422