Set minimum size for the main drkonqi dialog

BUG: 292343
FIXED-IN: 4.10.1